<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
        

    <PreferenceCategory
            android:title="@string/settings_gps">
            
        <CheckBoxPreference
                android:key="gps_state"
                android:title="@string/Map_27"
                android:summary="@string/summary_toggle_preference" />
            
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/settings_orientation">
            
        <CheckBoxPreference
                android:key="orientation_state"
                android:title="@string/settings_orientation_enabled"
                android:summary="@string/summary_toggle_preference" />
            
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/settings_maps_cache">
            
        <CheckBoxPreference
                android:key="cache_delete"
                android:title="@string/settings_delete_all"
                android:summary="@string/summary_toggle_preference" />
<!--                -->
<!--                <TextViewPreference-->
<!--                android:key="data_transfer"-->
<!--                android:title="@string/settings_downloaded_data"-->
<!--                android:summary="@string/summary_toggle_preference" />-->
                
                            <EditTextPreference
                android:key="data_transfer"
                android:title="@string/settings_tile_name"
                android:summary="@string/summary_toggle_preference" />
                
                <ListPreference
                android:key="list_strategy"
                android:title="@string/settings_tilling_strategy"
                android:summary="@string/summary_toggle_preference"
                android:entries="@array/cache_strategies"       
                android:entriyValues="@array/cache_strategies_values"                         
                android:dialogTitle="@string/summary_toggle_preference" />
            
    </PreferenceCategory>
    
    
<!--    <string name="settings_maps_cache">Maps cache</string>-->
<!--    <string name="settings_mode">Mode</string>    -->
<!--    -->
<!--    <string name="settings_tilling_strategy">Tiling strategy</string>-->
    
                
<!--    <PreferenceCategory-->
<!--            android:title="@string/settings">-->
<!---->
<!--        <EditTextPreference-->
<!--                android:key="edittext_preference"-->
<!--                android:title="@string/title_edittext_preference"-->
<!--                android:summary="@string/summary_edittext_preference"-->
<!--                android:dialogTitle="@string/dialog_title_edittext_preference" />-->
<!--                -->
<!--        <ListPreference-->
<!--                android:key="list_preference"-->
<!--                android:title="@string/title_list_preference"-->
<!--                android:summary="@string/summary_list_preference"-->
<!--                android:entries="@array/entries_list_preference"-->
<!--                android:entryValues="@array/entryvalues_list_preference"-->
<!--                android:dialogTitle="@string/dialog_title_list_preference" />-->
<!---->
<!--    </PreferenceCategory>-->
<!---->
<!--    <PreferenceCategory-->
<!--            android:title="@string/launch_preferences">-->
<!---->
<!--         This PreferenceScreen tag serves as a screen break (similar to page break-->
<!--             in word processing). Like for other preference types, we assign a key-->
<!--             here so it is able to save and restore its instance state. -->
<!--        <PreferenceScreen-->
<!--                android:key="screen_preference"-->
<!--                android:title="@string/title_screen_preference"-->
<!--                android:summary="@string/summary_screen_preference">-->
            
<!--             You can place more preferences here that will be shown on the next screen. -->
                     
<!--            <CheckBoxPreference-->
<!--                    android:key="next_screen_checkbox_preference"-->
<!--                    android:title="@string/title_next_screen_toggle_preference"-->
<!--                    android:summary="@string/summary_next_screen_toggle_preference" />-->
<!--                -->
<!--        </PreferenceScreen>-->
<!---->
<!--        <PreferenceScreen-->
<!--                android:title="@string/title_intent_preference"-->
<!--                android:summary="@string/summary_intent_preference">-->
<!---->
<!--            <intent android:action="android.intent.action.VIEW"-->
<!--                    android:data="http://www.android.com" />-->
<!---->
<!--        </PreferenceScreen>-->
<!---->
<!--    </PreferenceCategory>-->
<!--    -->
<!--    <PreferenceCategory-->
<!--            android:title="@string/preference_attributes">-->
<!--    -->
<!--        <CheckBoxPreference-->
<!--                android:key="parent_checkbox_preference"-->
<!--                android:title="@string/title_parent_preference"-->
<!--                android:summary="@string/summary_parent_preference" />-->

<!--         The visual style of a child is defined by this styled theme attribute. -->
<!--        <CheckBoxPreference-->
<!--                android:key="child_checkbox_preference"-->
<!--                android:dependency="parent_checkbox_preference"-->
<!--                android:layout="?android:attr/preferenceLayoutChild"-->
<!--                android:title="@string/title_child_preference"-->
<!--                android:summary="@string/summary_child_preference" />-->
<!--            -->
<!--    </PreferenceCategory>-->
    
</PreferenceScreen>
